--- a/index.html
+++ b/index.html
@@ -303,68 +303,34 @@
         }
       }
     }
-    
-async function compartilharWhatsApp(item) {
-  const tipo = (item.tipo || "").toLowerCase();
 
-  // --- Escolher imagem conforme tipo ---
-  const imgCarro = "https://raw.githubusercontent.com/sobralfelhipek/consultaprot/main/PRCARRO.jpg";
-  const imgMoto  = "https://raw.githubusercontent.com/sobralfelhipek/consultaprot/main/PRMOTO.jpg";
+function compartilharWhatsApp(item) {
+  const tipo = (item.tipo || "").toString().toLowerCase();
+  const icone = tipo === "carro" ? "🚗" : tipo === "moto" ? "🏍️" : "";
 
-  const imageURL = tipo === "carro" ? imgCarro : imgMoto;
-
-  // --- Formatador de data/hora ---
+  // Gera data/hora atual
   const agora = new Date();
-  const dia  = String(agora.getDate()).padStart(2, "0");
-  const mes  = String(agora.getMonth() + 1).padStart(2, "0");
-  const ano  = agora.getFullYear();
+  const dia = String(agora.getDate()).padStart(2, "0");
+  const mes = String(agora.getMonth() + 1).padStart(2, "0");
+  const ano = agora.getFullYear();
   const hora = String(agora.getHours()).padStart(2, "0");
-  const min  = String(agora.getMinutes()).padStart(2, "0");
+  const min = String(agora.getMinutes()).padStart(2, "0");
 
-  // --- Mensagem final ---
-  const mensagem =
-`${tipo === "carro" ? "🚗" : "🏍️"} *${item.veiculo}*
-------------------------
-Mensalidade: R$ ${formatarValor(item.mensalidade)}
-Marca: ${item.marca}
-Tipo: ${item.tipo}
-------------------------
-Consulta realizada em:
-${dia}/${mes}/${ano} às ${hora}:${min}`;
+  const dataHora = `${dia}/${mes}/${ano} - ${hora}:${min}`;
 
-  // ---------------------------------------------------------------------------------------
-  // 🔵 1) TENTATIVA ANDROID (envio da imagem real via Web Share API)
-  // ---------------------------------------------------------------------------------------
-  try {
-    if (navigator.canShare) {
-      const response = await fetch(imageURL);
-      const blob = await response.blob();
-      const file = new File([blob], "imagem.jpg", { type: blob.type });
+  const msg =
+`${icone}
+${item.veiculo}
+-----------------------
+*Mensalidade:* R$ ${formatarValor(item.mensalidade)}
+*Marca:* ${item.marca}
+*Tipo:* ${item.tipo}
+-----------------------
+Consulta realizada no dia:
+${dataHora}`;
 
-      if (navigator.canShare({ files: [file] })) {
-        await navigator.share({
-          files: [file],
-          title: "Consulta PROTERCAR",
-          text: mensagem // legenda da imagem
-        });
-        return; // sucesso → encerra aqui
-      }
-    }
-  } catch (e) {
-    console.warn("Android share falhou → usando fallback.");
-  }
-
-  // ---------------------------------------------------------------------------------------
-  // 🔴 2) FALLBACK AUTOMÁTICO (iPhone ou navegador sem suporte a envio de imagem)
-  // ---------------------------------------------------------------------------------------
-  const mensagemFallback =
-    `${mensagem}\n\n` +
-    `🖼️ Imagem: ${imageURL}`;
-
-  const url =
-    "https://wa.me/?text=" + encodeURIComponent(mensagemFallback);
-
-  window.open(url, "_blank");
+  const link = "https://wa.me/?text=" + encodeURIComponent(msg);
+  window.open(link, "_blank");
 }
 
     async function buscar() {
