--- a/index.html
+++ b/index.html
@@ -479,7 +479,14 @@ ${dataHora}`;
               </td>
               <td>${marca}</td>
               <td>${tipo}</td>
-              <td><button class="share-icon-btn" title="Compartilhar" onclick='compartilharWhatsApp(${JSON.stringify(item).replaceAll("'", "\\'")})'>
+              <td><button class="share-icon-btn" title="Compartilhar" onclick='compartilharWhatsApp(${JSON.stringify(item).replaceAll("'", "\'")})'>
+  <img src="https://img.icons8.com/?size=512&id=16713&format=png" width="26">
+</button>
+
+<!-- Botão Copiar Texto -->
+<button class="share-icon-btn" title="Copiar Texto" onclick='copiarTexto(${JSON.stringify(item).replaceAll("'", "\'")})'>
+  <img src="https://img.icons8.com/ios-glyphs/30/000000/copy.png" width="24">
+</button>(${JSON.stringify(item).replaceAll("'", "\\'")})'>
   <img src="https://img.icons8.com/?size=512&id=16713&format=png" width="26">
 </button></td>
             </tr>
