--- a/index.html
+++ b/index.html
@@ -340,7 +340,6 @@ ${item.veiculo}
 • no ato da contratação
 💵R$ ${formatarValor(valorPersonalizado)}\n`;
   }
-
   msg +=
 `
 ---------------------
@@ -348,8 +347,8 @@ ${item.veiculo}
 • após 30 dias da contratação
 💵 R$ ${formatarValor(item.mensalidade)}
 ---------------------
-*Marca:* ${item.marca}
-*Tipo:* ${item.tipo}
+*FABRICANTE:* ${item.marca}
+*TIPO:* ${item.tipo}
 ---------------------
 Consulta realizada no dia:
 ${dataHora}`;
